# pdf_editor

./: .gitignore  README.md  pyproject.toml  run_pdf_editor.py
.github/workflows/: windows-pyinstaller.yml
src/pdf_editor/: __init__.py  app.py  document.py  pdf_io.py
src/pdf_editor/widgets/: __init__.py  canvas.py  main_window.py  property_panel.py
