[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-editor-app"
version = "0.1.0"
description = "A lightweight desktop PDF editor with image insertion support."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "yamaryu" }
]
dependencies = [
    "PySide6>=6.6.0",
    "PyMuPDF>=1.23.3",
    "Pillow>=10.0.0",
    "qt-material>=2.14.0"
]

[project.scripts]
pdf-editor = "pdf_editor.app:main"

[tool.setuptools.packages.find]
where = ["src"]
